--- a/resources/index.html
+++ b/resources/index.html
@@ -36,6 +36,7 @@
      
         </script> -->
         <link rel="stylesheet" href="../CSS/navbar.css">
+        <link rel="stylesheet" href="../shop/css/fontAwesome.css">
     <title>Resources | Velocita Racing</title>
 </head>
 <body>
@@ -68,12 +69,19 @@
         <ul id="myMenu" class="card-box">
             <li class="card">
                 <div class="image">
-                    <img src="../IMAGES/brake.svg" alt="img">
+                    <img src="../IMAGES/PDF_file_icon.svg" alt="img">
                 </div>
                 <div class="text">
-                    <a href="#">HTML</a>
-                    <form  action="">
-                        <input class="download" type="submit" value="DOWNLOAD"/>
+                    <a href="#">FB RULE BOOK V21.1</a>
+                    <div class="rating">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                    <form target="_blank" action="https://drive.google.com/file/d/1XwdTMriF-83_wiHrK6oa2XjeSbXlMHXg/view?usp=sharing">
+                        <input class="download" type="submit" value="READ"/>
                     </form>
                 </div></li>
             <li class="card"><a href="#">CSS</a></li>
