--- a/resources/index.html
+++ b/resources/index.html
@@ -64,7 +64,7 @@
             Welcome to Velocita Racing Resources
         </div>
 
-        <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
+        <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search for Topics, Author..." title="Type in a category">
     
         <ul id="myMenu" class="card-box">
             <li class="card">
