--- a/resources/index.html
+++ b/resources/index.html
@@ -86,7 +86,50 @@
                     <form target="_blank" action="https://drive.google.com/file/d/1XwdTMriF-83_wiHrK6oa2XjeSbXlMHXg/view?usp=sharing">
                         <input class="download" type="submit" value="READ"/>
                     </form>
-                </div></li>
+                </div>
+            </li>
+            <li class="card">
+                <div class="image">
+                    <img src="../IMAGES/PDF_file_icon.svg" alt="img">
+                </div>
+                <div class="text">
+                    <a href="#">FUNDAMENTALS OF VEHICLE DYNAMICS</a>
+                    <div class="author">
+                        <span class="auth">BY: NIRANJAN BHARADWAJ</span>
+                    </div>
+                    <div class="rating">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                    <form target="_blank" action="https://drive.google.com/file/d/1w8m42DVJqjkY7QYtuTOVWtiND0XERfH2/view?usp=sharing">
+                        <input class="download" type="submit" value="READ"/>
+                    </form>
+                </div>
+            </li>
+            <li class="card">
+                <div class="image">
+                    <img src="../IMAGES/PDF_file_icon.svg" alt="img">
+                </div>
+                <div class="text">
+                    <a href="#">RACECAR VEHICLE DYNAMICS</a>
+                    <div class="author">
+                        <span class="auth">BY: NIRANJAN BHARADWAJ</span>
+                    </div>
+                    <div class="rating">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                    <form target="_blank" action="https://drive.google.com/file/d/1CP3cbQAogNIbGHOBNmZ8wzukTUZ18NlG/view?usp=sharing">
+                        <input class="download" type="submit" value="READ"/>
+                    </form>
+                </div>
+            </li>
             <li class="card"><a href="#">CSS</a></li>
             <li class="card"><a href="#">JavaScript</a></li>
             <li class="card"><a href="#">PHP</a></li>
