--- a/resources/index.html
+++ b/resources/index.html
@@ -64,14 +64,25 @@
             Welcome to Velocita Racing Resources
         </div>
 
-        <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search for Topics, Author..." title="Type in a category">
-    
+        <div class="search">
+            <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search for Topics, Author..." title="Type in a category">
+            <div class="request">
+                <form target="_blank" action="https://forms.gle/NLEtJsLDgWxs7KWz5">
+                    <input class="download add" type="submit" value="ADD NEW"/>
+                </form>
+                <form target="_blank" action="https://forms.gle/32iguMrJPbQqbbbp8">
+                    <input class="download add" type="submit" value="REQUEST DOC"/>
+                </form>
+            </div>
+        </div>       
+
         <ul id="myMenu" class="card-box">
             <li class="card">
                 <div class="image">
                     <img src="../IMAGES/PDF_file_icon.svg" alt="img">
                 </div>
                 <div class="text">
+
                     <a href="#">FB RULE BOOK V21.1</a>
                     <div class="author">
                         <span class="auth">BY: FORMULA BHARAT</span>
