--- a/resources/index.html
+++ b/resources/index.html
@@ -91,8 +91,8 @@
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star-o"></span>
+                        <span class="fa fa-star-o"></span>
                     </div>
                     <form target="_blank" action="https://drive.google.com/file/d/1XwdTMriF-83_wiHrK6oa2XjeSbXlMHXg/view?usp=sharing">
                         <input class="download" type="submit" value="READ"/>
@@ -112,8 +112,8 @@
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star-half-o checked"></span>
+                        <span class="fa fa-star-o"></span>
                     </div>
                     <form target="_blank" action="https://drive.google.com/file/d/1w8m42DVJqjkY7QYtuTOVWtiND0XERfH2/view?usp=sharing">
                         <input class="download" type="submit" value="READ"/>
@@ -133,8 +133,8 @@
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star-o"></span>
+                        <span class="fa fa-star-o"></span>
                     </div>
                     <form target="_blank" action="https://drive.google.com/file/d/1CP3cbQAogNIbGHOBNmZ8wzukTUZ18NlG/view?usp=sharing">
                         <input class="download" type="submit" value="READ"/>
