--- a/resources/index.html
+++ b/resources/index.html
@@ -72,7 +72,7 @@
         </div>
 
         <div class="search">
-            <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search for Topics, Author..." title="Type in a category">
+            <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search for Topics, Author, Subsystem..." title="Type in a category">
             <div class="request">
                 <form target="_blank" action="https://forms.gle/NLEtJsLDgWxs7KWz5">
                     <input class="download add" type="submit" value="ADD NEW"/>
