--- a/index.html
+++ b/index.html
@@ -1279,18 +1279,18 @@
                 <div class="tabs2">
                   <div class="tab2">
                     <input class="accordion2" type="radio" id="rd11" name="rd">
-                    <label class="tab-label2" for="rd11"></label>
+                    <label class="tab-label2" for="rd11">What are the benefits of being a part of Velocita?</label>
                     <div class="tab-content2">
                       
                     </div>
                   </div>
-                  <div class="tab2">
+                  <!-- <div class="tab2">
                     <input class="accordion2" type="radio" id="rd12" name="rd">
                     <label class="tab-label2" for="rd12"></label>
                     <div class="tab-content2">
     
                     </div>
-                  </div>
+                  </div> -->
                   <div class="tab2">
                     <input class="accordion2" type="radio" id="rd13" name="rd">
                     <label for="rd13" class="tab-close2">Close others &times;</label>
