--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <button class="dropbtn">CAREERS<img class="dropdown-arrow" src="./IMAGES/arrow.png" alt="dropdown-arrow"></button>
                     <div class="dropdown-content">
                     <a href="#careers">STUDENT CAREERS</a>
-                    <a href="#join-us">RECRUITMENT 2020</a>
+                    <a href="#join-us">RECRUITMENT 2021</a>
                     <!-- <a href="#">Link 3</a> -->
                     </div>
                 </div>
@@ -1210,9 +1210,9 @@
             </div>
             <div class="but" style="display: flex; align-items: center; justify-content: center;">
                 <button class="proceed-btn ripple-btn modal-night-button-two form-close-btn">Exit</button>
-                <!-- <form target="_blank" action="https://chat.whatsapp.com/FRJck1xeGNM4Ds3qHTwwDq" style="margin-left: 25px;">
-                    <input class="chat-button proceed-btn ripple-btn" type="submit" value="Join Chat" />
-               </form> -->
+                <form target="_blank" action="https://chat.whatsapp.com/FRJck1xeGNM4Ds3qHTwwDq" style="margin-left: 25px;" onclick="myFunction()">
+                    <input class="chat-button proceed-btn ripple-btn" type="submit" disabled value="Join Chat" />
+               </form>
             </div>
             
         </div>
@@ -1335,6 +1335,7 @@
         }); 
 
     </script>
+
  
     <script src="JS/refresh.js"></script>
     <script src="JS/mobnav.js"></script>
