--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
                 <div class="career-joinus-heading">
                     <p>Join our team</p>
                     <div class="info-career-joinus">
-                        <p>Become a part of velocita's family and explore your skills and learn new everyday. Get exposed to various opportunities and solve real world problems.<br><br>We've got designing, photography, content writing and much more for you. Be a part of our story...we can't wait to seeya!<br><br>PS: As we told you, we do have fun! #unleashthebeast in you!<br><br>Recruitment/ Orientaion 2021 will start soon, stay tuned for latest updates!</p>
+                        <p>Become a part of velocita's family and explore your skills and learn new everyday. Get exposed to various opportunities and solve real world problems.<br><br>We've got designing, photography, content writing and much more for you. Be a part of our journey!<br><br>PS: As we told you, we do have fun! #unleashthebeast in you!<br><br>Recruitment 2021 will start soon, stay tuned for latest updates!</p>
                     </div>
                     <div class="info-career-joinus-button">
                         <button class="career-button career-button-one modal-btn-one ripple-btn">Apply Now</button>
@@ -1193,7 +1193,7 @@
             <div class="apply-now">
                 
                     <p>Yeah, The wait is finally over! <br><br>Become a part Ramaiah's only Combustion Class FSAE team.<br><br>Be there for Velocita's Virtual Orientaion on <b>8th March 2021</b> and get to know about our racing jouney as well as what suits you the best.<br><br>Click <b>"Proceed"</b> to continue to google froms, and after filling the same click on <b>"Join Chat"</b> to join our group.<br><br>Fill details carefully.<br><br>Seeya on 8th!</p>
-                
+                    <img class="website-poster" src="./IMAGES/Website poster.png" alt="recruitment">
                 <!-- <p>1. The process consists of 2 steps<br><br>&nbsp;&nbsp;&nbsp;Step 1&nbsp;:&nbsp; Tech/ Non-tech written round<br><br>&nbsp;&nbsp;&nbsp;Step 2&nbsp;:&nbsp; Interview round<br><br>2. Fill details carefully<br><br>3. You will be notified via e-mail</p> -->
             </div>
             <button class="proceed-btn ripple-btn modal-night-button-one modal-close-btn">Proceed</button>
