--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
                 <div class="career-joinus-heading">
                     <p>Join our team</p>
                     <div class="info-career-joinus">
-                        <p>Become a part of velocita's family and explore your skills and learn new everyday. Get exposed to various opportunities and solve real world problems.<br><br>We've got designing, photography, content writing and much more for you. Be a part of our journey!<br><br>PS: As we told you, we do have fun! #unleashthebeast in you!<br><br>Recruitment 2021 will start soon, stay tuned for latest updates!</p>
+                        <p>Become a part of velocita's family and explore your skills and learn new everyday. Get exposed to various opportunities and solve real world problems.<br><br>We've got designing, photography, content writing and much more for you. Be a part of our journey!<br><br>PS: As we told you, we do have fun! #unleashthebeast in you!<br><br><mark style="background-color: yellow;">Recruitment 2021 has begun, click on <b>"Apply Now"</b> to register!</mark></p>
                     </div>
                     <div class="info-career-joinus-button">
                         <button class="career-button career-button-one modal-btn-one ripple-btn">Apply Now</button>
@@ -1211,7 +1211,7 @@
             <div class="but" style="display: flex; align-items: center; justify-content: center;">
                 <button class="proceed-btn ripple-btn modal-night-button-two form-close-btn">Exit</button>
                 <form target="_blank" action="https://chat.whatsapp.com/FRJck1xeGNM4Ds3qHTwwDq" style="margin-left: 25px;" onclick="myFunction()">
-                    <input class="chat-button proceed-btn ripple-btn" type="submit" disabled value="Join Chat" />
+                    <input class="chat-button proceed-btn ripple-btn" type="submit" value="Join Chat" />
                </form>
             </div>
             
@@ -1248,7 +1248,7 @@
                     <input class="accordion" type="radio" id="rd1" name="rd">
                     <label class="tab-label" for="rd1">When will the recruitment process start?</label>
                     <div class="tab-content">
-                        Recruitment 2021 will begin by 2nd week of March.
+                        Recruitment 2021 will begin from 8th of March.
                     </div>
                   </div>
                   <div class="tab">
@@ -1256,6 +1256,13 @@
                     <label class="tab-label" for="rd2">Can I apply for tech and well as non-tech?</label>
                     <div class="tab-content">
                         Yes, you can apply for multiple subsystems as per your area of interests.
+                    </div>
+                  </div>
+                  <div class="tab">
+                    <input class="accordion" type="radio" id="rd4" name="rd">
+                    <label class="tab-label" for="rd4">How will the selection procedure take place?</label>
+                    <div class="tab-content">
+                        You will be informed shortly.
                     </div>
                   </div>
                   <div class="tab">
