--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                 
             <div id="join-us" class="career-joinus-heading-box">
                
-                <div class="career-joinus-heading">
+                <div id="rec" class="career-joinus-heading">
                     <p>Join our team</p>
                     <div class="info-career-joinus">
                         <p>Become a part of velocita's family and explore your skills and learn new everyday. Get exposed to various opportunities and solve real world problems.<br><br>We've got designing, photography, content writing and much more for you. Be a part of our journey!<br><br>PS: As we told you, we do have fun! #unleashthebeast in you!<br><br><mark style="background-color: yellow;">Recruitment 2021 has begun, click on <b>"Apply Now"</b> to register!</mark></p>
