--- a/links/index.html
+++ b/links/index.html
@@ -12,6 +12,9 @@
     <div class="logo"><img src="../IMAGES/HOME/VR new logo.png" alt="Logo"></div>
     <div class="container">
         <div class="link-buttons">
+            <form  action="../../#rec">
+              <input class="button" type="submit" value="Recruitment 2021"/>
+            </form>
             <form  action="../../">
                 <input class="button" type="submit" value="OFFICIAL WEBSITE"/>
             </form>
