--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                 
             <div id="join-us" class="career-joinus-heading-box">
                
-                <div id="rec" class="career-joinus-heading">
+                <div q class="career-joinus-heading">
                     <p>Join our team</p>
                     <div class="info-career-joinus">
                         <p>Become a part of velocita's family and explore your skills and learn new everyday. Get exposed to various opportunities and solve real world problems.<br><br>We've got designing, photography, content writing and much more for you. Be a part of our journey!<br><br>PS: As we told you, we do have fun! #unleashthebeast in you!<br><br><mark style="background-color: yellow;">Recruitment 2021 has begun, click on <b>"Apply Now"</b> to register!</mark></p>
@@ -1256,6 +1256,13 @@
                     <label class="tab-label" for="rd2">Can I apply for tech and well as non-tech?</label>
                     <div class="tab-content">
                         Yes, you can apply for multiple subsystems as per your area of interests.
+                    </div>
+                  </div>
+                  <div class="tab">
+                    <input class="accordion" type="radio" id="rd5" name="rd">
+                    <label class="tab-label" for="rd5">I dont have any prior knowledge, can i apply?</label>
+                    <div class="tab-content">
+                        Yes, you can apply, and are welcome to learn the things going on in Velocita with the team.
                     </div>
                   </div>
                   <div class="tab">
