--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@
                     <input class="accordion" type="radio" id="rd5" name="rd">
                     <label class="tab-label" for="rd5">I dont have any prior knowledge, can i apply?</label>
                     <div class="tab-content">
-                        Yes, you can apply, and are welcome to learn the things going on in Velocita with the team.
+                        Yes! You can apply, and are welcome to learn the things going on in Velocita with the team.
                     </div>
                   </div>
                   <div class="tab">
