--- a/index.html
+++ b/index.html
@@ -1260,7 +1260,7 @@
                   </div>
                   <div class="tab">
                     <input class="accordion" type="radio" id="rd5" name="rd">
-                    <label class="tab-label" for="rd5">I dont have any prior knowledge, can i apply?</label>
+                    <label class="tab-label" for="rd5">I dont have any prior knowledge, can I apply?</label>
                     <div class="tab-content">
                         Yes! You can apply, and are welcome to learn the things going on in Velocita with the team.
                     </div>
