--- a/links/index.html
+++ b/links/index.html
@@ -12,7 +12,7 @@
     <div class="logo"><img src="../IMAGES/HOME/VR new logo.png" alt="Logo"></div>
     <div class="container">
         <div class="link-buttons">
-            <form  action="../../#rec">
+            <form action="https://forms.gle/oEVTMxNDE7xhh1MF9">
               <input class="button" type="submit" value="Recruitment 2021"/>
             </form>
             <form  action="../../">
