--- a/links/index.html
+++ b/links/index.html
@@ -13,16 +13,16 @@
     <div class="container">
         <div class="link-buttons">
             <form action="https://youtu.be/vUrGiPGBkOY">
-              <input class="button" type="submit" value="ORIENTAION 2021"/>
+              <input class="button small" type="submit" value="ORIENTAION 2021"/>
             </form>
             <form action="https://forms.gle/oEVTMxNDE7xhh1MF9">
-              <input class="button" type="submit" value="Recruitment 2021"/>
+              <input class="button small" type="submit" value="RECRUITMENT 2021"/>
             </form>
             <form  action="../../">
-                <input class="button" type="submit" value="OFFICIAL WEBSITE"/>
+                <input class="button small" type="submit" value="OFFICIAL WEBSITE"/>
             </form>
             <form  action="../../blog">
-                <input class="button" type="submit" value="VR BLOG" />
+                <input class="button small" type="submit" value="VR BLOG" />
             </form>
             <form  action="https://narkha.com/collections/velocita-racing">
                 <input class="button" type="submit" value="SHOP OFFICIAL MERCHANDISE" />
