--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
                 <div q class="career-joinus-heading">
                     <p>Join our team</p>
                     <div class="info-career-joinus">
-                        <p>Become a part of velocita's family and explore your skills and learn new everyday. Get exposed to various opportunities and solve real world problems.<br><br>We've got designing, photography, content writing and much more for you. Be a part of our journey!<br><br>PS: As we told you, we do have fun! #unleashthebeast in you!<br><br><mark style="background-color: yellow;">Recruitment 2021 has begun, click on <b>"Apply Now"</b> to register!</mark></p>
+                        <p>Become a part of velocita's family and explore your skills and learn new everyday. Get exposed to various opportunities and solve real world problems.<br><br>We've got designing, photography, content writing and much more for you. Be a part of our journey!<br><br>PS: As we told you, we do have fun! #unleashthebeast in you!<br><br>Recruitment 2021 has ended, check back next season! <br>You can leave us an open application anytime.</p>
                     </div>
                     <div class="info-career-joinus-button">
                         <button class="career-button career-button-one modal-btn-one ripple-btn">Apply Now</button>
@@ -1227,7 +1227,7 @@
             <div class="but" style="display: flex; align-items: center; justify-content: center;">
                 <button class="proceed-btn ripple-btn modal-night-button-two form-close-btn">Exit</button>
                 <form target="_blank" action="https://chat.whatsapp.com/FRJck1xeGNM4Ds3qHTwwDq" style="margin-left: 25px;" onclick="myFunction()">
-                    <input class="chat-button proceed-btn ripple-btn" type="submit" value="Join Chat" />
+                    <input class="chat-button proceed-btn ripple-btn" disabled type="submit" value="Join Chat" />
                </form>
             </div>
             
