--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                     </div>
                 </div>
 
-                <div class="member-card team-card-four right-two">
+                <div class="member-card team-card-five right-two">
                     <div class="card-side1">
                         <img src="IMAGES/TEAM/vamshi.webp" alt="Vamshikrishna">
                         
