--- a/index.html
+++ b/index.html
@@ -643,8 +643,8 @@
                         <h5>Design Engineer</h5>
                         <p>Let's keep pushing!<br><br></p> 
                         <div class="team-social">
-                            <a href="https://www.instagram.com/vamshikrishna.sarode/" target="_blank"><i class="team-social-icon-seven team-social-icon fa fa-instagram fa-2x" aria-hidden="true"></i></a>
-                            <a href="https://www.linkedin.com/in/vamshi-krishna-s-r-15524b1b3/" target="_blank"><i class="team-social-icon-eight team-social-icon fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/vamshikrishna.sarode/" target="_blank"><i class="team-social-icon-nine team-social-icon fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/vamshi-krishna-s-r-15524b1b3/" target="_blank"><i class="team-social-icon-ten team-social-icon fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
                         </div>   
                     </div>
                 </div>
