--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                       <div class="swiper-slide banner-4">
                         <a class="youtube-banner-button" target="_blank" href="https://www.youtube.com/watch?v=goey_q8qdPc">Watch Now</a>
                       </div>
-                      <!-- <div class="swiper-slide">Slide 5</div>
-                      <div class="swiper-slide">Slide 6</div>
+                      <!-- <div class="swiper-slide">Slide 5</div> -->
+                      <!-- <div class="swiper-slide">Slide 6</div>
                       <div class="swiper-slide">Slide 7</div>
                       <div class="swiper-slide">Slide 8</div>
                       <div class="swiper-slide">Slide 9</div>
@@ -1234,7 +1234,7 @@ Dots/bullets/indicators
                       <!-- <div class="swiper-slide"><img src="./IMAGES/SHOP/1.webp" alt="Racing Journey Podcast"></div> -->
                     </div>
                     <!-- Add Pagination -->
-                    <div class="swiper-pagination swiper-pagination-shop"></div>
+                    <div class="swiper-pagination swiper-pagination-podcast"></div>
                     <!-- Add Arrows -->
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
