--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     </div>
     
     <div class="navbar">
-        <div class="logo"><a class="logo-txt" href="#home"><img class="black-logo-VR" src="IMAGES/HOME/VR new logo.png" alt="velocita racing logo"><img class="white-logo-VR" src="IMAGES/HOME/VR new logo white.png" alt="velocita racing logo white"><p>VELOCITA RACING</p></a></div>
+        <!-- IMAGES/HOME/VR new logo.png -->
+        <div class="logo"><a class="logo-txt" href="#home"><img class="black-logo-VR" src="IMAGES/HOME/VR new logo white.png" alt="velocita racing logo"><img class="white-logo-VR" src="IMAGES/HOME/VR new logo white.png" alt="velocita racing logo white"><p>VELOCITA RACING</p></a></div>
         <ul class="nav-links">
             <div class="night-mode">
                 <input type='checkbox' id='time' class="night-toggle"/>
