--- a/index.html
+++ b/index.html
@@ -1318,12 +1318,23 @@ Dots/bullets/indicators
             <h3>Velocita Racing Recruitment 2021</h3>
             <span class="modal-close modal-close-one">x</span>
             <div class="apply-now">
+                <p>Registrations for Season 2021-22 has ended, however do feel free to get in touch!
+                    <br><br>
+                    You can get in touch with our team members if you wish to.
+                    <br><br>
+                    You can also leave us an open application anytime!
+                    <br><br>
+                    Write to us at velocitaracing.rit@gmail.com</p> 
                 
-                    <p>Yeah, The wait is finally over! <br><br>Become a part Ramaiah's only Combustion Class FSAE team.<br><br>Be there for Velocita's Virtual Orientaion on <b>8th March 2021</b> and get to know about our racing jouney as well as what suits you the best.<br><br>Click <b>"Proceed"</b> to continue to google froms, and after filling the same click on <b>"Join Chat"</b> to join our group.<br><br>Fill details carefully.<br><br>Seeya on 8th!</p>
-                    <img class="website-poster" src="./IMAGES/Website poster.png" alt="recruitment">
+                    <!-- <p>Yeah, The wait is finally over! <br><br>Become a part Ramaiah's only Combustion Class FSAE team.<br><br>Be there for Velocita's Virtual Orientaion on <b>8th March 2021</b> and get to know about our racing jouney as well as what suits you the best.<br><br>Click <b>"Proceed"</b> to continue to google froms, and after filling the same click on <b>"Join Chat"</b> to join our group.<br><br>Fill details carefully.<br><br>Seeya on 8th!</p>
+                    <img class="website-poster" src="./IMAGES/Website poster.png" alt="recruitment"> -->
                 <!-- <p>1. The process consists of 2 steps<br><br>&nbsp;&nbsp;&nbsp;Step 1&nbsp;:&nbsp; Tech/ Non-tech written round<br><br>&nbsp;&nbsp;&nbsp;Step 2&nbsp;:&nbsp; Interview round<br><br>2. Fill details carefully<br><br>3. You will be notified via e-mail</p> -->
             </div>
-            <button class="proceed-btn ripple-btn modal-night-button-one modal-close-btn">Proceed</button>
+            <div class="but" style="display: flex; align-items: center; justify-content: center;">
+                <button style="margin-right: 25px;" disabled class="proceed-btn ripple-btn modal-night-button-one modal-close-btn">Proceed</button>
+                <button class="proceed-btn ripple-btn modal-night-button-seven modal-close-btn-two">Exit</button>
+            </div>
+            
         </div>
     </div>
 
