--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="blog.css">
     <link rel="stylesheet" href="./blog/blog.css">
-    <title>Page Not Found</title>
+    <title>Page Not Found | Velocita Racing</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
