--- a/404.html
+++ b/404.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="blog.css">
-    <link rel="stylesheet" href="./blog/blog.css">
+
     <title>Page Not Found | Velocita Racing</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
@@ -16,12 +15,21 @@
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="./blog/blog.css">
-    <link rel="stylesheet" href="./CSS/navbar.css">
-    <link rel="stylesheet" href="./CSS/contact.css">
+    <link rel="stylesheet" href="https://velocitaracing.github.io/blog/blog.css">
+    <link rel="stylesheet" href="https://velocitaracing.github.io/CSS/navbar.css">
+    <link rel="stylesheet" href="https://velocitaracing.github.io/CSS/contact.css">
 
 </head>
 <body>
+    <style>
+        @media screen and (max-width:450px){
+            #home{
+                margin-top: 0;
+                margin-bottom: 0;
+            }
+        }
+        
+    </style>
 
     <div class="navbar">
         <!-- IMAGES/HOME/VR new logo.png -->
@@ -147,10 +155,7 @@
         });
       </script>
 
-<!-- <script src="blog.js"></script> -->
-
-<script src="../JS/mobnav.js"></script>
-<script src="JS/slide.js"></script>
+    <script src="https://velocitaracing.github.io/JS/mobnav.js"></script>
 
 </body>
 </html>
