--- a/index.html
+++ b/index.html
@@ -1112,7 +1112,7 @@ Dots/bullets/indicators
                         <p>We invite you to become a part of our jouney. Feel free to reach us out regarding any sponsor related queries.
                             <br><br>Velocita Racing will be greatful for your support!</p>
                     </div>
-                    <div class="info-sponsor-button info-career-joinus-button">
+                    <div class="info-sponsor-button">
                         <button class="sponsor-button sponsor-button-one modal-btn-three ripple-btn">Join Us</button>
                         <button class="sponsor-button sponsor-button-two modal-btn-four ripple-btn">FAQs</button>
                     </div>
