--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="VPMtUxObJwMZ7-1zTe02kr4DbcdJKVzxqxDzZlK2M2E" />
     <meta name="google-site-verification" content="O-xUiNInFXDQSB7JbiKJwwWByGinrk1pdWw6mB9g-Jo" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="google-site-verification" content="jSxRZhkAjau6jO_zccxioL7sHsvOkoh_ZUU8KXp6cn0" /> -->
     <meta property="fb:pages" content="1579413715688758" />
     <meta name="description" content=" Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. 
@@ -11,6 +12,8 @@
     on the development of racing grade vehicles for various competitions across India. Our team of highly qualified students is the driving 
     force behind it, each year developing better racing machines, very much in line with the current developments of the automotive industry.">
     <meta name="keywords" content="velocita racing, Velocita, Racing, Bangalore, velocita website, velocita racing website, Bengaluru, Karnataka, India, Ramaiah Institute of Technology, Velocita Blog, VRF-1, VRF-2, VR-1, VR-2, Ramaiah Racing Team, RIT, Ramaiah Mechanical Department">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Velocita Racing | FSAE Team | IN</title>
     <meta name="author" content="Soumyadeep">
     <script type="application/ld+json">{
         "@context": "http://schema.org",
@@ -49,8 +52,7 @@
                    "https://twitter.com/RacingVelocita",
                    "https://www.youtube.com/velocitaracing"]
         }</script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Velocita Racing | FSAE Team | IN</title>
+
     
 <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
