--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="7MLHgVxXAzBAyVZ4rvrDndYWsL5r78e4nTk47bFqGoc" />
     <meta name="google-site-verification" content="VPMtUxObJwMZ7-1zTe02kr4DbcdJKVzxqxDzZlK2M2E" />
     <meta name="google-site-verification" content="O-xUiNInFXDQSB7JbiKJwwWByGinrk1pdWw6mB9g-Jo" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
