--- a/crowd-funding/index.html
+++ b/crowd-funding/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Velocita Racing Blog | Lookinto our publications, technology, stories and much more. Take a peek in our racing world">
     <meta name="keywords" content="velocita racing, velocita racing website, Velocita blog, Ramaiah blog, velocita website, velocita racing website, blogs, Racing, Bangalore, Bengaluru, Racing blog, Ramaiah Institute of Technology, Velocita Blog, VRF-1, VRF-2, VR-1, VR-2, Ramaiah Racing Team, RIT, Ramaiah Mechanical Department">
     <title>Crowd Funding | Velocita Racing</title>
-    <meta name="author" content="Soumyadeep">
+    <meta name="author" content="Soumyadeep Guchhait">
     <script type="application/ld+json">{
         "@context": "http://schema.org",
        
@@ -139,12 +139,13 @@
     <section id="home">
         <div class="container">
             <div class="text">
-                <p1>Hey!</p1><p2><br>We'll be live soon,<br></p2>
+                <!-- <p1>Hey!</p1><p2><br>We'll be live soon,<br></p2> -->
 
-                <p>Ready to 
+                <!-- <p>Ready to 
                   <span class="txt-type" data-wait="3000" data-words='["#Design ?", "#Build ?", "#Race ?", "#UnleashTheBeast ?"]'></span>
-                </p>
+                </p> -->
             </div>
+        </div>   
     </section>
    
     <div class="footer">
