--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="https://velocitaracing.github.io/blog/blog.css">
+    <link rel="stylesheet" href="https://velocitaracing.github.io/CSS/404.css">
     <link rel="stylesheet" href="https://velocitaracing.github.io/CSS/navbar.css">
     <link rel="stylesheet" href="https://velocitaracing.github.io/CSS/contact.css">
 
@@ -123,7 +123,7 @@
                 <p1>Ooops!</p1><p2><br>Sorry, Nothings here.<br></p2>
 
                 <p>Let's go back :) 
-                  <span class="txt-type" data-wait="3000" data-words='["#Design ?", "#Build ?", "#Race ?", "#UnleashTheBeast ?"]'></span>
+                  <!-- <span class="txt-type" data-wait="3000" data-words='["#Design ?", "#Build ?", "#Race ?", "#UnleashTheBeast ?"]'></span> -->
                 </p>
             </div>
            
@@ -135,25 +135,6 @@
         </p>
     </div>
 
-
-    <script>
-        var swiper = new Swiper('.swiper-container', {
-          effect: 'coverflow',
-          grabCursor: true,
-          centeredSlides: true,
-          slidesPerView: 'auto',
-          coverflowEffect: {
-            rotate: 50,
-            stretch: 0,
-            depth: 100,
-            modifier: 1,
-            slideShadows: true,
-          },
-          pagination: {
-            el: '.swiper-pagination',
-          },
-        });
-      </script>
 
     <script src="https://velocitaracing.github.io/JS/mobnav.js"></script>
 
