--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
 
+    <meta property="og:image" content="https://velocitaracing.github.io/IMAGES/HOME/Asset%204.webp" />
+    <meta property="og:image:width" content="180" />
+    <meta property="og:image:height" content="110" />
+
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
