--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
 
+    <meta property="og:url" content="https://velocitaracing.github.io" />
     <meta property="og:image" content="https://velocitaracing.github.io/IMAGES/HOME/Asset%204.webp" />
     <meta property="og:image:width" content="180" />
     <meta property="og:image:height" content="110" />
