--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
 
+    <meta property="og:title" content="Velocita Racing | FSAE TEAM | INDIA" />
     <meta property="og:url" content="https://velocitaracing.github.io" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka." />
     <meta property="og:image" content="https://velocitaracing.github.io/IMAGES/HOME/Asset%204.webp" />
     <meta property="og:image:width" content="180" />
     <meta property="og:image:height" content="110" />
