--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
     on the development of racing grade vehicles for various competitions across India." />
     <meta name="twitter:url" content="https://velocitaracing.github.io" />
     <meta name="twitter:title" content="Velocita Racing | FSAE TEAM | INDIA" />
-    <meta name="twitter:description" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka." />
+    <meta name="twitter:summary" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka." />
     <meta name="twitter:image" content="https://velocitaracing.github.io/IMAGES/HOME/Asset%204.webp" />
+    
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
