--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
     <meta property="og:url" content="https://velocitaracing.github.io" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka." />
-    <meta property="og:image" content="https://velocitaracing.github.io/IMAGES/HOME/Asset%204.webp" />
+    <meta name="image" property="og:image" content="https://velocitaracing.github.io/IMAGES/HOME/Asset%204.webp" />
     <meta property="og:image:width" content="180" />
     <meta property="og:image:height" content="110" />
+
 
     <meta name="twitter:card" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. 
     This team comprises of 35 passionate and enthusiastic undergraduate students from various departments, who are continuously working 
