--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     <meta property="og:image:height" content="110" />
 
 
-    <meta name="twitter:card" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. 
+    <meta name="twitter:card" content=" Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. 
     This team comprises of 35 passionate and enthusiastic undergraduate students from various departments, who are continuously working 
     on the development of racing grade vehicles for various competitions across India." />
-    <meta name="twitter:url" content="https://velocitaracing.github.io" />
-    <meta name="twitter:title" content="Velocita Racing | FSAE TEAM | INDIA" />
-    <meta name="twitter:summary" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka." />
+    <meta name="twitter:site" content="@RacingVelocita" />
+    <meta name="twitter:title" content="Velocita Racing | FSAE Team | India" />
+    <meta name="twitter:description" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. " />
     <meta name="twitter:image" content="https://velocitaracing.github.io/IMAGES/HOME/Asset%204.webp" />
     
     <script>
