--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
     <meta property="og:image:height" content="110" />
 
 
-    <meta name="twitter:card" content=" Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. 
-    This team comprises of 35 passionate and enthusiastic undergraduate students from various departments, who are continuously working 
-    on the development of racing grade vehicles for various competitions across India." />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@RacingVelocita" />
     <meta name="twitter:title" content="Velocita Racing | FSAE Team | India" />
     <meta name="twitter:description" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. " />
