--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <meta property="og:image:height" content="110" />
 
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@RacingVelocita" />
     <meta name="twitter:title" content="Velocita Racing | FSAE Team | India" />
     <meta name="twitter:description" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. " />
