--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                    "https://twitter.com/RacingVelocita",
                    "https://www.youtube.com/velocitaracing"]
         }</script>
-    
-    <meta name="image" property="og:image" content="[https://velocitaracing.github.io/IMAGES/HOME/Asset%204.webp]" />    
 
     <meta name="thumbnail" content="https://velocitaracing.github.io/IMAGES/HOME/VR%20new%20logo.png" />
+
+    <meta name="image" property="og:image" content="https://velocitaracing.github.io/IMAGES/HOME/Asset%204.png" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -74,6 +74,7 @@
     <meta property="og:image:width" content="180" />
     <meta property="og:image:height" content="110" />
 
+    
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@RacingVelocita" />
