--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@RacingVelocita" />
-    <meta name="twitter:title" content="Velocita Racing | FSAE Team | India" />
+    <meta name="twitter:title" content="Velocita Racing | FSAE Team | INDIA" />
     <meta name="twitter:description" content="Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. " />
     <meta name="twitter:image" content="https://velocitaracing.github.io/IMAGES/HOME/Asset%204.webp" />
     
