--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <meta property="og:image:width" content="180" />
     <meta property="og:image:height" content="110" />
 
-    <meta name="image" property="og:image" content="https://velocitaracing.github.io/IMAGES/HOME/Asset%204.png" />
+    <meta name="image" property="og:image" content="[https://velocitaracing.github.io/IMAGES/HOME/Asset%204.png]" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@RacingVelocita" />
