--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
 
+
+    <meta name="image" property="og:image" content="https://velocitaracing.github.io/IMAGES/HOME/Asset%204.png" />
+
     <meta property="og:title" content="Velocita Racing | FSAE TEAM | INDIA" />
     <meta property="og:url" content="https://velocitaracing.github.io" />
     <meta property="og:type" content="website" />
@@ -73,7 +76,7 @@
     <meta property="og:image:width" content="180" />
     <meta property="og:image:height" content="110" />
 
-    <meta name="image" property="og:image" content="[https://velocitaracing.github.io/IMAGES/HOME/Asset%204.png]" />
+    
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@RacingVelocita" />
