--- a/crowd-funding/index.html
+++ b/crowd-funding/index.html
@@ -141,7 +141,8 @@
 
 
     <section id="home">
-
+      <h1 id="heading">Crowdfunding</h1>
+      <p id="heading">Help us Grow More...</p>
     </section>
 
 
@@ -334,6 +335,7 @@
       });
     </script> -->
 
+    <script src="./backScroll.js"></script>
     <script src="../JS/mobnav.js"></script>
     <script src="../JS/ripple.js"></script>
     <script src="./crowdFunding.js"></script>
