--- a/crowd-funding/index.html
+++ b/crowd-funding/index.html
@@ -60,11 +60,12 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
 
 
-    <link rel="stylesheet" href="./app.css">
+    <link rel="stylesheet" href="./CSS/app.css">
     <link rel="stylesheet" href="../CSS/navbar.css">
     <link rel="stylesheet" href="../CSS/contact.css">
     <link rel="stylesheet" href="../shop/css/fontAwesome.css">
-    <script src="./spreadsheet.js"></script>
+    
+    <script src="./JS/spreadsheet.js"></script>
 </head>
 <body>
     
@@ -490,7 +491,7 @@
       });
     </script> -->
 
-    <script src="./backScroll.js"></script>
+    <script src="./JS/backScroll.js"></script>
     <script src="../JS/mobnav.js"></script>
     <script src="../JS/ripple.js"></script>
     <!-- <script src="./crowdFunding.js"></script> -->
