--- a/crowd-funding/index.html
+++ b/crowd-funding/index.html
@@ -64,8 +64,9 @@
     <link rel="stylesheet" href="../CSS/navbar.css">
     <link rel="stylesheet" href="../CSS/contact.css">
     <link rel="stylesheet" href="../shop/css/fontAwesome.css">
-    
+
     <script src="./JS/spreadsheet.js"></script>
+    <script src="./JS/names.js"></script>
 </head>
 <body>
     
@@ -404,12 +405,12 @@
       </div>
 
       <div class="names">
-        <ul>
-          <li>Niranjan &nbsp;.&nbsp;</li>
+        <ul id="myNames">
+          <!-- <li>Niranjan &nbsp;.&nbsp;</li>
           <li>Pranay &nbsp;.&nbsp;</li>
           <li>Deep &nbsp;.&nbsp;</li>
           <li>Satvik &nbsp;.&nbsp;</li>
-          <li>Deep</li>
+          <li>Deep</li> -->
         </ul>
       </div>
 
