--- a/crowd-funding/index.html
+++ b/crowd-funding/index.html
@@ -492,6 +492,7 @@
       });
     </script> -->
 
+    <script src="../JS/smoothscroll.js"></script>
     <script src="./JS/backScroll.js"></script>
     <script src="../JS/mobnav.js"></script>
     <script src="../JS/ripple.js"></script>
