--- a/links/index.html
+++ b/links/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="../CSS/social.css">
     <link rel="stylesheet" href="../CSS/footer.css">
+    <link rel="stylesheet" href="../shop/css/fontAwesome.css">
 </head>
 <body>
     <div class="logo"><img src="../IMAGES/HOME/VR new logo.png" alt="Logo"></div>
